<resources>
    <string name="app_name">TriquiTrueque</string>
    <string name="ussername">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="resgistrarme">Soy Nuevo, Deseo Registrarme</string>
    <string name="or">ó</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Correo Electronico</string>
    <string name="bnCrear">Registrarme</string>

    <string name="request_client_id">432332932065-nv2gairsucqavcmnsbk4b9o3s51l3q3n.apps.googleusercontent.com</string>
    <string name="vacio"/>

    <string name="facebook_app_id">1299074563599541</string>
    <string name="fb_login_protocol_scheme">fb1299074563599541</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="practicar">Practicar</string>
    <string name="unjugador">Un Jugador</string>
    <string name="estadosunidos">EstadosUnidos</string>

</resources>

