<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Register">


    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:id="@+id/etnombrer"
              android:inputType="textPersonName"
              android:hint="@string/name"
              android:layout_marginBottom="10dp"
    />

    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:id="@+id/etapellidor"
              android:inputType="textPersonName"
              android:hint="@string/apellido"
              android:layout_marginBottom="10dp"
    />

    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:id="@+id/etcorreo"
              android:inputType="textEmailAddress"
              android:hint="@string/ussername"
              android:layout_marginBottom="10dp"
    />

    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:id="@+id/etContraseñar"
              android:inputType="textPersonName"
              android:hint="@string/password"
              android:layout_marginBottom="10dp"
              android:password="true"
    />

    <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:background="@drawable/FondoLogo"
            android:text="@string/bnCrear"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false" />

</LinearLayout>