<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".Login">


    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:id="@+id/etUsuario"
              android:background="@android:color/white"
              android:inputType="textEmailAddress"
              android:hint="@string/ussername"
              android:paddingBottom="2dp"    />

    <TextView android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:text="@string/vacio"
              android:textAlignment="center"/>

    <EditText android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:id="@+id/etContraseña"
              android:background="@android:color/white"
              android:inputType="textEmailAddress"
              android:hint="@string/password"
              android:paddingBottom="2dp"
              android:password="true" />

    <TextView android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:text="@string/vacio"
              android:textAlignment="center"/>

    <Button android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/btIniciar"
            android:text="@string/iniciar"
            android:textSize="15sp"
            android:textAllCaps="false" />

    <Button android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/btResgistro"
            android:text="@string/resgistrarme"
            android:textSize="15sp"
            android:textAllCaps="false" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

</LinearLayout>

